# pyfsig

./: .gitignore  .~lock.wiki_file_sigs.csv#  LICENSE  MANIFEST  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
other/: extract_messy.py  parse_sig_csv.py  sig_table.html  wiki_file_sigs.csv  wiki_sig_table.html
other/resources/g_kessler/: ACKNOWLEDGEMENTS  File Signatures.html
scripts/: convert_signatures.py
src/: __init__.py  file_signatures.py
src/pyfsig/: __init__.py  constants.py  file_signatures.py  interface.py
src/resources/g_kessler/: LICENSE
src/tests/: test_pyfsig.py
