[tool.poetry]
name = "pyfsig"
version = "0.8.3"
description = "A library for identifying files form their magic byte signature."
authors = ["schlerp <schlerpderpson@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
