[tool.poetry]
name = "pyfsig"
version = "1.0.0"
description = "A library for identifying files form their magic byte signature."
authors = ["schlerp <schlerpderpson@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
