[project]
name = "pyfsig"
version = "1.1.0"
description = "A library for identifying files form their magic byte signature."
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
    "hatch>=1.14.0",
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pyfsig"]
